build/log/idf_py_stderr_output_735416
/home/kevino/Programming/GPS Data Logger/main/i2c_manager.c: In function 'i2c_manager_write':
/home/kevino/Programming/GPS Data Logger/main/i2c_manager.c:58:5: error: implicit declaration of function 'memcpy' [-Werror=implicit-function-declaration]
   58 |     memcpy(&write_buf[1], data, len);
      |     ^~~~~~
/home/kevino/Programming/GPS Data Logger/main/i2c_manager.c:5:1: note: 'memcpy' is defined in header '<string.h>'; did you forget to '#include <string.h>'?
    4 | #include "freertos/FreeRTOS.h"
  +++ |+#include <string.h>
    5 | #include "freertos/semphr.h"
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:135: esp-idf/main/CMakeFiles/__idf_main.dir/i2c_manager.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/kevino/Programming/GPS Data Logger/main/telemetry_task.c: In function 'telemetry_task':
/home/kevino/Programming/GPS Data Logger/main/telemetry_task.c:62:21: error: implicit declaration of function 'bme280_handler_set_reference_alt' [-Werror=implicit-function-declaration]
   62 |                     bme280_handler_set_reference_alt(gps_alt);
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/kevino/Programming/GPS Data Logger/main/telemetry_task.c:70:52: error: 'ubx_nav_pvt_t' has no member named 'headMot'
   70 |                     float gps_cog = g_telemetry.gps.headMot / 1e5; // Use headMot for true course
      |                                                    ^
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:93: esp-idf/main/CMakeFiles/__idf_main.dir/telemetry_task.c.obj] Error 1
/home/kevino/Programming/GPS Data Logger/main/ui_task.c: In function 'draw_needle':
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:32:9: error: implicit declaration of function 'ssd1306_draw_pixel'; did you mean 'ssd1306_dump_page'? [-Werror=implicit-function-declaration]
   32 |         ssd1306_draw_pixel(dev, cx + (r+2)*cos(a), cy + (r+2)*sin(a), 1);
      |         ^~~~~~~~~~~~~~~~~~
      |         ssd1306_dump_page
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:36:5: error: implicit declaration of function 'ssd1306_line'; did you mean '_ssd1306_line'? [-Werror=implicit-function-declaration]
   36 |     ssd1306_line(dev, cx, cy, x, y, 1);
      |     ^~~~~~~~~~~~
      |     _ssd1306_line
/home/kevino/Programming/GPS Data Logger/main/ui_task.c: In function 'ui_task':
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:50:27: error: 'button_event_queue' undeclared (first use in this function); did you mean 'button_event_t'?
   50 |         if (xQueueReceive(button_event_queue, &btn_evt, 0)) {
      |                           ^~~~~~~~~~~~~~~~~~
      |                           button_event_t
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:50:27: note: each undeclared identifier is reported only once for each function it appears in
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:51:28: error: 'BUTTON_EVENT_SINGLE_CLICK' undeclared (first use in this function); did you mean 'BUTTON_EVENT_SINGLE_PRESS'?
   51 |             if (btn_evt == BUTTON_EVENT_SINGLE_CLICK) {
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~
      |                            BUTTON_EVENT_SINGLE_PRESS
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:70:9: error: unknown type name 'telemetry_snapshot_t'
   70 |         telemetry_snapshot_t snap;
      |         ^~~~~~~~~~~~~~~~~~~~
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:71:9: error: implicit declaration of function 'telemetry_get_snapshot' [-Werror=implicit-function-declaration]
   71 |         telemetry_get_snapshot(&snap);
      |         ^~~~~~~~~~~~~~~~~~~~~~
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:76:68: error: request for member 'gps' in something not a structure or union
   76 |                 snprintf(buf, sizeof(buf), "Sats: %d Fix: %d", snap.gps.numSV, snap.gps.fixType);
      |                                                                    ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:76:84: error: request for member 'gps' in something not a structure or union
   76 |                 snprintf(buf, sizeof(buf), "Sats: %d Fix: %d", snap.gps.numSV, snap.gps.fixType);
      |                                                                                    ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:77:52: error: implicit declaration of function 'strlen' [-Werror=implicit-function-declaration]
   77 |                 ssd1306_display_text(&dev, 2, buf, strlen(buf), false);
      |                                                    ^~~~~~
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:9:1: note: include '<string.h>' or provide a declaration of 'strlen'
    8 | #include <math.h>
  +++ |+#include <string.h>
    9 | 
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:77:52: warning: incompatible implicit declaration of built-in function 'strlen' [-Wbuiltin-declaration-mismatch]
   77 |                 ssd1306_display_text(&dev, 2, buf, strlen(buf), false);
      |                                                    ^~~~~~
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:77:52: note: include '<string.h>' or provide a declaration of 'strlen'
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:78:61: error: request for member 'gps' in something not a structure or union
   78 |                 snprintf(buf, sizeof(buf), "Lat: %.5f", snap.gps.lat / 1e7);
      |                                                             ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:80:61: error: request for member 'gps' in something not a structure or union
   80 |                 snprintf(buf, sizeof(buf), "Lon: %.5f", snap.gps.lon / 1e7);
      |                                                             ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:82:62: error: request for member 'gps' in something not a structure or union
   82 |                 snprintf(buf, sizeof(buf), "Alt: %.1fm", snap.gps.hMSL / 1000.0);
      |                                                              ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:88:64: error: request for member 'env' in something not a structure or union
   88 |                 snprintf(buf, sizeof(buf), "Temp: %.1f C", snap.env.temperature);
      |                                                                ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:90:66: error: request for member 'env' in something not a structure or union
   90 |                 snprintf(buf, sizeof(buf), "Pres: %.1f hPa", snap.env.pressure);
      |                                                                  ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:92:65: error: request for member 'env' in something not a structure or union
   92 |                 snprintf(buf, sizeof(buf), "Hum:  %.1f %%", snap.env.humidity);
      |                                                                 ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:98:59: error: request for member 'mag' in something not a structure or union
   98 |                 snprintf(buf, sizeof(buf), "H: %.1f", snap.mag.heading);
      |                                                           ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:103:38: error: request for member 'mag' in something not a structure or union
  103 |                 int idx = (int)((snap.mag.heading + 22.5) / 45.0);
      |                                      ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:106:39: error: request for member 'mag' in something not a structure or union
  106 |                 draw_needle(&dev, snap.mag.heading);
      |                                       ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:122:9: error: implicit declaration of function 'ssd1306_show_screen'; did you mean 'ssd1306_clear_screen'? [-Werror=implicit-function-declaration]
  122 |         ssd1306_show_screen(&dev);
      |         ^~~~~~~~~~~~~~~~~~~
      |         ssd1306_clear_screen
/home/kevino/Programming/GPS Data Logger/main/ui_task.c: At top level:
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:10:20: warning: 'TAG' defined but not used [-Wunused-variable]
   10 | static const char *TAG = "UI_TASK";
      |                    ^~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:275: esp-idf/main/CMakeFiles/__idf_main.dir/ui_task.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7198: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
